syntax = "proto3";

package resources.common;

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/common;common";

// Wrapped translated message for the client
// @dbscanner: json
message I18NItem {
  // @sanitize: method=StripTags
  string key = 1;
  // @sanitize: method=StripTags
  map<string, string> parameters = 2;
}
